Added better support of G_STRFUNC for Visual Studio platform

https://bugzilla.gnome.org/show_bug.cgi?id=670128